--- a/src/app/landingpage/contact/contact.component.scss
+++ b/src/app/landingpage/contact/contact.component.scss
@@ -96,3 +96,9 @@ h1{
         }
     }
 }
+
+@media (min-width: 992px){
+    .contact-div{
+        padding: 0 45px;
+    }
+}
