--- a/src/app/landingpage/landingpage.component.scss
+++ b/src/app/landingpage/landingpage.component.scss
@@ -148,7 +148,7 @@ footer h2,p{
   }
 
   .footer-div{
-    padding: 0 0 0 60px;
+    padding: 0 0 0 75px;
   }
 
   .social{
